[package]
name = "bao-vhost-frontend"
version = "0.1.0"
authors = ["João Peixoto <joaopeixotooficial@gmail.com>"]
keywords = ["bao", "vhost-user", "virtio", "frontend"]
description = "Bao vhost frontend"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = ">=3.0",  features = ["derive"] }
field-offset = "0.3.4"
lazy_static = "1.4.0"
libc = ">=0.2.95"
log = "0.4.17"
seccompiler = "0.2.0"
virtio-bindings = "0.2.1"
virtio-queue = "0.11.0"
vmm-sys-util = "0.12.1"
vhost = { version = "0.10.0", features = ["vhost-user-frontend", "vhost-kern", "vhost-user-backend"] }
vhost-user-frontend = { git = "https://github.com/joaopeixoto13/vhost", branch = "vhost-user-frontend" }
vm-memory = { version = "0.14.0", features = ["backend-mmap", "backend-atomic", "backend-bitmap"] }
bao-sys = { git = "https://github.com/joaopeixoto13/bao-sys" }

# The [patch] section is used to override dependencies with custom implementations

[patch.crates-io]
vm-memory = { git = "https://github.com/joaopeixoto13/vm-memory", branch = "bao-hypervisor" }
vhost = { git = "https://github.com/joaopeixoto13/vhost", branch = "vhost-user-frontend" }